# Pixine

./: README.md
A1/: .gitignore
A1/data/: specification.txt
A1/src/: main.cpp
A2/: b.ps1  meson.build  readme.txt
A2/data/: config.txt
A2/include/: components.hpp  game.hpp  util.hpp  vec2.h
A2/src/: entity.cpp  entity_manager.cpp  game.cpp  main.cpp  meson.build  util.cpp
A3/: meson.build
A3/data/: assets.txt
A3/include/: Action.h  Animation.h  Assets.h  Entity.h  Physics.h  Scene.h  Scene_Play.h
A3/src/: action.cpp  animation.cpp  assets.cpp  entity_manager.cpp  game_engine.cpp  physics.cpp  scene.cpp  scene_menu.cpp  scene_play.cpp
Pixine/: .gitignore  .rgignore  meson.build
Pixine/include/: Components.h  Entity.h  EntityManager.h  EntityMemoryPool.h  GameEngine.h  Physics.h  Scene.h  Scene_Menu.h  Scene_Play.h  action.h  animation.h  components.h  entity.h  entity_manager.h  entity_memory_pool.h  physics.h  scene.h  scene_menu.h  scene_play.h  vec2.h
Pixine/src/: action.cpp  animation.cpp  assets.cpp  entity.cpp  entity_manager.cpp  entity_memory_pool.cpp  game_engine.cpp  main.cpp  meson.build  physics.cpp  scene.cpp  scene_menu.cpp  scene_play.cpp  vec2.cpp
Pixine/subprojects/SFML-2.5.1/: .meson-subproject-wrap-hash.txt  meson.build
Pixine/subprojects/SFML-2.5.1/src/SFML/Audio/: meson.build
Pixine/subprojects/SFML-2.5.1/src/SFML/Graphics/: meson.build
Pixine/subprojects/SFML-2.5.1/src/SFML/Network/: meson.build
Pixine/subprojects/SFML-2.5.1/src/SFML/System/: meson.build
Pixine/subprojects/SFML-2.5.1/src/SFML/Window/: meson.build
(+39 files in other folders)
